tidb-operator/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: access-dashboard
  namespace: tidb-cluster
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dashboard.jjuc-demo.com
      http:
        paths:
          - backend:
              service:
                name: basic-discovery
                port:
                  number: 10262
            path: /dashboard
            pathType: Prefix
